--- a/style.css
+++ b/style.css
@@ -29,3 +29,14 @@ font-family: dunbar-tall, sans-serif;
 font-weight: 200;
 font-style: normal; 
 }
+table ~ h2{
+display: table-column-group;
+width: 100em;
+}
+tr{display: table-cell;
+background-color: lawngreen;}
+display:
+td{
+   display: table-cell;
+   background-color: aqua;
+}
